# controllers/expensesController.go
@@ -27,11 +27,11 @@ func NewExpensesController(services services.ExpensesServices) *ExpensesControll
 //	@Tags		Expenses
 //	@Accept		json
 //	@Produce	json
-//	@Param		req_dtos.Expenses body req_dtos.Expenses true "Expense data"
+//	@Param		req_dtos.Expenses	body		req_dtos.Expenses	true	"Expense data"
 //
-//	@Success	200	{object}	res_dtos.DefaultResponse
+//	@Success	200					{object}	res_dtos.DefaultResponse
 //
-//	@Router		/Expenses/create [POST]
+//	@Router		/Expenses/CreateExpenses [POST]
 func (c *ExpensesController) CreateExpenses(ctx *gin.Context) {
 
 	req := req_dtos.Expenses{}
@@ -56,44 +56,85 @@ func (c *ExpensesController) CreateExpenses(ctx *gin.Context) {
 	ctx.JSON(200, response)
 }
 
-// func CreateExpensesDetail(c *gin.Context) {
-// 	result := services.InsertExpensesDetail(c)
-// 	if result == (models.ExpensesDetail{}) {
-// 		c.JSON(400, gin.H{
-// 			"error": "Error creating expenses detail",
-// 		})
-// 		return
-// 	}
-// 	response := res_dtos.DefaultResponse{
-// 		Status:  string(res_dtos.Success),
-// 		Message: "Expenses detail created successfully",
-// 		Date:    time.Now().Format("02/01/2006 15:04:05"),
-// 		Data:    result,
-// 	}
+// CreateExpensesDetail godoc
+//
+//	@Summary	Create expenses
+//	@Tags		Expenses
+//	@Accept		json
+//	@Produce	json
+//	@Param		req_dtos.ExpensesDetail	body		req_dtos.ExpensesDetail	true	"ExpensesDetail data"
+//
+//	@Success	200						{object}	res_dtos.DefaultResponse
+//
+//	@Router		/Expenses/CreateExpensesDetail [POST]
+func (c *ExpensesController) CreateExpensesDetail(ctx *gin.Context) {
+	req := req_dtos.ExpensesDetail{}
+	err := ctx.ShouldBindJSON(&req)
+	helper.ErrorPanic(err)
 
-// 	c.JSON(200, response)
-// }
+	result := c.expensesServices.InsertExpensesDetail(req)
+	if result == (models.ExpensesDetail{}) {
+		ctx.JSON(400, gin.H{
+			"error": "Error creating expenses detail",
+		})
+		return
+	}
+	response := res_dtos.DefaultResponse{
+		Status:  string(res_dtos.Success),
+		Message: "Expenses detail created successfully",
+		Date:    time.Now().Format("02/01/2006 15:04:05"),
+		Data:    result,
+	}
 
-// func GetListMoneyCard(c *gin.Context) {
-// 	// Find All MoneyCard
-// 	listData := services.GetListMoneyCard(c)
-// 	response := res_dtos.DefaultResponse{
-// 		Status: string(res_dtos.Success),
-// 		Date:   time.Now().Format("02/01/2006 15:04:05"),
-// 		Data:   listData, // Data retrieved from the SQL query
-// 	}
-// 	// Return data
-// 	c.JSON(200, response)
-// }
+	ctx.JSON(200, response)
+}
 
-// func GetListMoneyCardDetail(c *gin.Context) {
-// 	// Find All MoneyCard
-// 	listData := services.GetListMoneyCardDetail(c)
-// 	response := res_dtos.DefaultResponse{
-// 		Status: string(res_dtos.Success),
-// 		Date:   time.Now().Format("02/01/2006 15:04:05"),
-// 		Data:   listData, // Data retrieved from the SQL query
-// 	}
-// 	// Return data
-// 	c.JSON(200, response)
-// }
+// GetListMoneyCard godoc
+//
+//	@Summary	Get list money item
+//	@Tags		Expenses
+//	@Accept		json
+//	@Produce	json
+//
+//	@Success	200	{object}	res_dtos.DefaultResponse
+//
+//	@Router		/Expenses/GetListMoneyCard [GET]
+func (c *ExpensesController) GetListMoneyCard(ctx *gin.Context) {
+
+	// Find All MoneyCard
+	listData := c.expensesServices.GetListMoneyCard()
+	response := res_dtos.DefaultResponse{
+		Status: string(res_dtos.Success),
+		Date:   time.Now().Format("02/01/2006 15:04:05"),
+		Data:   listData, // Data retrieved from the SQL query
+	}
+	// Return data
+	ctx.JSON(200, response)
+}
+
+// GetListMoneyCardDetail godoc
+//
+//	@Summary	Get list money detail item
+//	@Tags		Expenses
+//	@Accept		json
+//	@Produce	json
+//	@Param		req_dtos.GetExpensesDetailById	body		req_dtos.GetExpensesDetailById	true	"GetListMoneyCardDetail data"
+//
+//	@Success	200								{object}	res_dtos.DefaultResponse
+//
+//	@Router		/Expenses/GetListMoneyCardDetail [POST]
+func (c *ExpensesController) GetListMoneyCardDetail(ctx *gin.Context) {
+	req := req_dtos.GetExpensesDetailById{}
+	err := ctx.ShouldBindJSON(&req)
+	helper.ErrorPanic(err)
+
+	// Find All MoneyCard
+	listData := c.expensesServices.GetListMoneyCardDetail(req)
+	response := res_dtos.DefaultResponse{
+		Status: string(res_dtos.Success),
+		Date:   time.Now().Format("02/01/2006 15:04:05"),
+		Data:   listData, // Data retrieved from the SQL query
+	}
+	// Return data
+	ctx.JSON(200, response)
+}
