# docs/swagger.json
@@ -9,7 +9,7 @@
     "host": "localhost:8080",
     "basePath": "/api/v1",
     "paths": {
-        "/Expenses/create": {
+        "/Expenses/CreateExpenses": {
             "post": {
                 "consumes": [
                     "application/json"
@@ -42,7 +42,95 @@
                 }
             }
         },
-        "/HealthCheck/api": {
+        "/Expenses/CreateExpensesDetail": {
+            "post": {
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Expenses"
+                ],
+                "summary": "Create expenses",
+                "parameters": [
+                    {
+                        "description": "ExpensesDetail data",
+                        "name": "req_dtos.ExpensesDetail",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/dtos.ExpensesDetail"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/dtos.DefaultResponse"
+                        }
+                    }
+                }
+            }
+        },
+        "/Expenses/GetListMoneyCard": {
+            "get": {
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Expenses"
+                ],
+                "summary": "Get list money item",
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/dtos.DefaultResponse"
+                        }
+                    }
+                }
+            }
+        },
+        "/Expenses/GetListMoneyCardDetail": {
+            "post": {
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Expenses"
+                ],
+                "summary": "Get list money detail item",
+                "parameters": [
+                    {
+                        "description": "GetListMoneyCardDetail data",
+                        "name": "req_dtos.GetExpensesDetailById",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/dtos.GetExpensesDetailById"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/dtos.DefaultResponse"
+                        }
+                    }
+                }
+            }
+        },
+        "/HealthCheck/Api": {
             "get": {
                 "consumes": [
                     "application/json"
@@ -64,7 +152,7 @@
                 }
             }
         },
-        "/HealthCheck/db": {
+        "/HealthCheck/Database": {
             "get": {
                 "consumes": [
                     "application/json"
@@ -100,6 +188,31 @@
                 },
                 "status": {
                     "type": "string"
+                }
+            }
+        },
+        "dtos.ExpensesDetail": {
+            "type": "object",
+            "properties": {
+                "expensesAmount": {
+                    "type": "number"
+                },
+                "expensesDesc": {
+                    "type": "string"
+                },
+                "expensesId": {
+                    "type": "integer"
+                },
+                "expensesType": {
+                    "type": "string"
+                }
+            }
+        },
+        "dtos.GetExpensesDetailById": {
+            "type": "object",
+            "properties": {
+                "id": {
+                    "type": "integer"
                 }
             }
         },
