# repository/expensesRepo.go
@@ -1,14 +1,14 @@
 package repository
 
 import (
+	req_dtos "github.com/9cps/api-go-gin/dtos/request"
 	res_dtos "github.com/9cps/api-go-gin/dtos/response"
 	"github.com/9cps/api-go-gin/models"
-	"github.com/gin-gonic/gin"
 )
 
 type ExpensesRopository interface {
-	InsertExpenses(c *gin.Context) models.Expenses
-	InsertExpensesDetail(c *gin.Context) models.ExpensesDetail
-	GetListMoneyCard(c *gin.Context) res_dtos.ExpensesCard
-	GetListMoneyCardDetail(c *gin.Context) []models.ExpensesDetail
+	InsertExpenses(req models.Expenses) models.Expenses
+	InsertExpensesDetail(req models.ExpensesDetail) models.ExpensesDetail
+	GetListMoneyCard() res_dtos.ExpensesCard
+	GetListMoneyCardDetail(req req_dtos.GetExpensesDetailById) []models.ExpensesDetail
 }
