# repository/expensesRepoImpl.go
@@ -1,6 +1,8 @@
 package repository
 
 import (
+	"fmt"
+
 	req_dtos "github.com/9cps/api-go-gin/dtos/request"
 	res_dtos "github.com/9cps/api-go-gin/dtos/response"
 	"github.com/9cps/api-go-gin/initializers"
@@ -17,85 +19,36 @@ func NewExpensesRepositoryImpl(Db *gorm.DB) ExpensesRopository {
 	return &ExpensesRepositoryImpl{Db: Db}
 }
 
-func (r *ExpensesRepositoryImpl) InsertExpenses(c *gin.Context) models.Expenses {
-	var req req_dtos.Expenses
-
-	// Map req to model
-	if err := c.ShouldBindJSON(&req); err != nil {
-		c.JSON(400, gin.H{
-			"error": "Bad request, invalid JSON data",
-		})
+func (r *ExpensesRepositoryImpl) InsertExpenses(req models.Expenses) models.Expenses {
+	result := initializers.DB.Create(&req)
+	if result.Error != nil {
 		return models.Expenses{}
 	}
-
-	isCondition := DeleteExpensesIfCountExceeds(c, 6)
-
-	if isCondition {
-		obj := models.Expenses{
-			ExpensesMonth:   req.ExpensesMonth,
-			ExpensesYear:    req.ExpensesYear,
-			ExpensesMoney:   req.ExpensesMoney, // จำนวนเงินตั้งต้น
-			ExpensesBalance: req.ExpensesMoney, // จำนวนเงินคงเหลือ
-		}
-
-		result := initializers.DB.Create(&obj)
-		if result.Error != nil {
-			c.JSON(400, gin.H{
-				"error": "Failed to insert expenses data",
-			})
-			return models.Expenses{}
-		}
-		return obj
-	}
-	return models.Expenses{}
+	return req
 }
 
-func (r *ExpensesRepositoryImpl) InsertExpensesDetail(c *gin.Context) models.ExpensesDetail {
-	var req req_dtos.ExpensesDetail
-
-	// Map req to model
-	if err := c.ShouldBindJSON(&req); err != nil {
-		c.JSON(400, gin.H{
-			"error": "Bad request, invalid JSON data",
-		})
-		return models.ExpensesDetail{}
-	}
-
-	obj := models.ExpensesDetail{
-		ExpensesId:     req.ExpensesId,
-		ExpensesType:   req.ExpensesType,
-		ExpensesDesc:   req.ExpensesDesc,
-		ExpensesAmount: req.ExpensesAmount,
-	}
-
+func (r *ExpensesRepositoryImpl) InsertExpensesDetail(req models.ExpensesDetail) models.ExpensesDetail {
 	// Create the ExpensesDetail record
-	result := initializers.DB.Create(&obj)
+	result := initializers.DB.Create(&req)
 	if result.Error != nil {
-		c.JSON(400, gin.H{
-			"error": "Failed to insert expenses detail data",
-		})
 		return models.ExpensesDetail{}
 	}
 
 	// Update the Expenses record's ExpensesBalance
 	var expenses models.Expenses
 	if err := initializers.DB.First(&expenses, req.ExpensesId).Error; err != nil {
-		c.JSON(400, gin.H{
-			"error": "Expenses record not found",
-		})
+		fmt.Printf("Error creating ExpensesDetail: %v", result.Error)
 		return models.ExpensesDetail{}
 	}
 
 	calBalance := expenses.ExpensesBalance - req.ExpensesAmount
 
 	if err := initializers.DB.Model(&expenses).Updates(models.Expenses{ExpensesBalance: calBalance}).Error; err != nil {
-		c.JSON(400, gin.H{
-			"error": "Failed to update Expenses record",
-		})
+		fmt.Printf("Error update ExpensesDetail: %v", result.Error)
 		return models.ExpensesDetail{}
 	}
 
-	return obj
+	return req
 }
 
 func DeleteExpensesIfCountExceeds(c *gin.Context, threshold int64) bool {
@@ -129,15 +82,13 @@ func DeleteExpensesIfCountExceeds(c *gin.Context, threshold int64) bool {
 	return true
 }
 
-func (r *ExpensesRepositoryImpl) GetListMoneyCard(c *gin.Context) res_dtos.ExpensesCard {
+func (r *ExpensesRepositoryImpl) GetListMoneyCard() res_dtos.ExpensesCard {
 	// SQL Query
 	rows, err := initializers.DB.Raw("SELECT * FROM expenses ORDER BY expenses_month ASC").Rows()
 
 	// Check for errors
 	if err != nil {
-		c.JSON(400, gin.H{
-			"error": "Failed to execute SQL query",
-		})
+		fmt.Printf("Error sql GetListMoneyCard: %v", err)
 		return res_dtos.ExpensesCard{} // Return an empty slice in case of error
 	}
 	defer rows.Close()
@@ -163,24 +114,12 @@ func (r *ExpensesRepositoryImpl) GetListMoneyCard(c *gin.Context) res_dtos.Expen
 	return expensesCard
 }
 
-func (r *ExpensesRepositoryImpl) GetListMoneyCardDetail(c *gin.Context) []models.ExpensesDetail {
-	var req req_dtos.GetExpensesDetailById
-	// Map req to model
-	if err := c.ShouldBindJSON(&req); err != nil {
-		c.JSON(400, gin.H{
-			"error": "Bad request, invalid JSON data",
-		})
-		return []models.ExpensesDetail{} // Return an empty slice in case of error
-	}
-
+func (r *ExpensesRepositoryImpl) GetListMoneyCardDetail(req req_dtos.GetExpensesDetailById) []models.ExpensesDetail {
 	// SQL Query
 	rows, err := initializers.DB.Raw("SELECT * FROM expenses_details WHERE expenses_id = ? ORDER BY created_at DESC", req.Id).Rows()
 
 	// Check for errors
 	if err != nil {
-		c.JSON(400, gin.H{
-			"error": "Failed to execute SQL query",
-		})
 		return []models.ExpensesDetail{} // Return an empty slice in case of error
 	}
 	defer rows.Close()
@@ -196,46 +135,3 @@ func (r *ExpensesRepositoryImpl) GetListMoneyCardDetail(c *gin.Context) []models
 
 	return expensesData
 }
-
-// func FindFriend(c *gin.Context) []models.Friend {
-// 	var req req_dtos.GetFriend
-// 	// Map req to model
-// 	if err := c.ShouldBindJSON(&req); err != nil {
-// 		c.JSON(400, gin.H{
-// 			"error": "Bad request, invalid JSON data",
-// 		})
-// 		return []models.Friend{} // Return an empty slice in case of error
-// 	}
-
-// 	// SQL Query
-// 	rows, err := initializers.DB.Raw("SELECT * FROM friends WHERE F_NAME LIKE ? OR L_NAME LIKE ?", "%"+req.KEYWORD+"%", "%"+req.KEYWORD+"%").Rows()
-
-// 	// Check for errors
-// 	if err != nil {
-// 		c.JSON(400, gin.H{
-// 			"error": "Failed to execute SQL query",
-// 		})
-// 		return []models.Friend{} // Return an empty slice in case of error
-// 	}
-// 	defer rows.Close()
-
-// 	var friend models.Friend // Assuming FriendModel is the struct for your friend data
-// 	var friendData []models.Friend
-
-// 	for rows.Next() {
-// 		// Scan the result into the friend struct
-// 		initializers.DB.ScanRows(rows, &friend)
-// 		friendData = append(friendData, friend)
-// 	}
-
-// 	return friendData
-// }
-
-// func DeleteFriend(c *gin.Context) bool {
-// 	id := c.Param("id")
-
-// 	// Delete by id
-// 	initializers.DB.Delete(&models.Friend{}, id)
-
-// 	return true
-// }
