# services/expensesServices.go
@@ -4,12 +4,11 @@ import (
 	req_dtos "github.com/9cps/api-go-gin/dtos/request"
 	res_dtos "github.com/9cps/api-go-gin/dtos/response"
 	"github.com/9cps/api-go-gin/models"
-	"github.com/gin-gonic/gin"
 )
 
 type ExpensesServices interface {
 	InsertExpenses(req req_dtos.Expenses) models.Expenses
-	InsertExpensesDetail(c *gin.Context) models.ExpensesDetail
-	GetListMoneyCard(c *gin.Context) res_dtos.ExpensesCard
-	GetListMoneyCardDetail(c *gin.Context) []models.ExpensesDetail
+	InsertExpensesDetail(req req_dtos.ExpensesDetail) models.ExpensesDetail
+	GetListMoneyCard() res_dtos.ExpensesCard
+	GetListMoneyCardDetail(req req_dtos.GetExpensesDetailById) []models.ExpensesDetail
 }
