# services/expensesServicesImpl.go
@@ -6,7 +6,6 @@ import (
 	"github.com/9cps/api-go-gin/initializers"
 	"github.com/9cps/api-go-gin/models"
 	"github.com/9cps/api-go-gin/repository"
-	"github.com/gin-gonic/gin"
 )
 
 type ExpensesServiceImpl struct {
@@ -31,25 +30,13 @@ func (s *ExpensesServiceImpl) InsertExpenses(req req_dtos.Expenses) models.Expen
 			ExpensesBalance: req.ExpensesMoney, // จำนวนเงินคงเหลือ
 		}
 
-		result := initializers.DB.Create(&obj)
-		if result.Error != nil {
-			return models.Expenses{}
-		}
-		return obj
+		result := s.ExpensesRopository.InsertExpenses(obj)
+		return result
 	}
 	return models.Expenses{}
 }
 
-func (s *ExpensesServiceImpl) InsertExpensesDetail(c *gin.Context) models.ExpensesDetail {
-	var req req_dtos.ExpensesDetail
-
-	// Map req to model
-	if err := c.ShouldBindJSON(&req); err != nil {
-		c.JSON(400, gin.H{
-			"error": "Bad request, invalid JSON data",
-		})
-		return models.ExpensesDetail{}
-	}
+func (s *ExpensesServiceImpl) InsertExpensesDetail(req req_dtos.ExpensesDetail) models.ExpensesDetail {
 
 	obj := models.ExpensesDetail{
 		ExpensesId:     req.ExpensesId,
@@ -59,33 +46,8 @@ func (s *ExpensesServiceImpl) InsertExpensesDetail(c *gin.Context) models.Expens
 	}
 
 	// Create the ExpensesDetail record
-	result := initializers.DB.Create(&obj)
-	if result.Error != nil {
-		c.JSON(400, gin.H{
-			"error": "Failed to insert expenses detail data",
-		})
-		return models.ExpensesDetail{}
-	}
-
-	// Update the Expenses record's ExpensesBalance
-	var expenses models.Expenses
-	if err := initializers.DB.First(&expenses, req.ExpensesId).Error; err != nil {
-		c.JSON(400, gin.H{
-			"error": "Expenses record not found",
-		})
-		return models.ExpensesDetail{}
-	}
-
-	calBalance := expenses.ExpensesBalance - req.ExpensesAmount
-
-	if err := initializers.DB.Model(&expenses).Updates(models.Expenses{ExpensesBalance: calBalance}).Error; err != nil {
-		c.JSON(400, gin.H{
-			"error": "Failed to update Expenses record",
-		})
-		return models.ExpensesDetail{}
-	}
-
-	return obj
+	result := s.ExpensesRopository.InsertExpensesDetail(obj)
+	return result
 }
 
 func DeleteExpensesIfCountExceeds(req req_dtos.Expenses, threshold int64) bool {
@@ -110,113 +72,12 @@ func DeleteExpensesIfCountExceeds(req req_dtos.Expenses, threshold int64) bool {
 	return true
 }
 
-func (s *ExpensesServiceImpl) GetListMoneyCard(c *gin.Context) res_dtos.ExpensesCard {
-	// SQL Query
-	rows, err := initializers.DB.Raw("SELECT * FROM expenses ORDER BY expenses_month ASC").Rows()
-
-	// Check for errors
-	if err != nil {
-		c.JSON(400, gin.H{
-			"error": "Failed to execute SQL query",
-		})
-		return res_dtos.ExpensesCard{} // Return an empty slice in case of error
-	}
-	defer rows.Close()
-
-	var expensesData []res_dtos.Expenses
-
-	sumBalance := float32(0)
-	for rows.Next() {
-		var expenses res_dtos.Expenses
-		// Scan the result into the friend struct
-		initializers.DB.ScanRows(rows, &expenses)
-		sumBalance += expenses.ExpensesBalance
-		// Calculate spending for each row
-		spending := expenses.ExpensesMoney - expenses.ExpensesBalance
-		expenses.TotalSpending += spending
-		expensesData = append(expensesData, expenses)
-	}
-
-	var expensesCard res_dtos.ExpensesCard
-	expensesCard.Data = expensesData
-	expensesCard.TotalBalance = sumBalance
-
-	return expensesCard
+func (s *ExpensesServiceImpl) GetListMoneyCard() res_dtos.ExpensesCard {
+	result := s.ExpensesRopository.GetListMoneyCard()
+	return result
 }
 
-func (s *ExpensesServiceImpl) GetListMoneyCardDetail(c *gin.Context) []models.ExpensesDetail {
-	var req req_dtos.GetExpensesDetailById
-	// Map req to model
-	if err := c.ShouldBindJSON(&req); err != nil {
-		c.JSON(400, gin.H{
-			"error": "Bad request, invalid JSON data",
-		})
-		return []models.ExpensesDetail{} // Return an empty slice in case of error
-	}
-
-	// SQL Query
-	rows, err := initializers.DB.Raw("SELECT * FROM expenses_details WHERE expenses_id = ? ORDER BY created_at DESC", req.Id).Rows()
-
-	// Check for errors
-	if err != nil {
-		c.JSON(400, gin.H{
-			"error": "Failed to execute SQL query",
-		})
-		return []models.ExpensesDetail{} // Return an empty slice in case of error
-	}
-	defer rows.Close()
-
-	var expenses models.ExpensesDetail
-	var expensesData []models.ExpensesDetail
-
-	for rows.Next() {
-		// Scan the result into the friend struct
-		initializers.DB.ScanRows(rows, &expenses)
-		expensesData = append(expensesData, expenses)
-	}
-
-	return expensesData
+func (s *ExpensesServiceImpl) GetListMoneyCardDetail(req req_dtos.GetExpensesDetailById) []models.ExpensesDetail {
+	result := s.ExpensesRopository.GetListMoneyCardDetail(req)
+	return result
 }
-
-// func FindFriend(c *gin.Context) []models.Friend {
-// 	var req req_dtos.GetFriend
-// 	// Map req to model
-// 	if err := c.ShouldBindJSON(&req); err != nil {
-// 		c.JSON(400, gin.H{
-// 			"error": "Bad request, invalid JSON data",
-// 		})
-// 		return []models.Friend{} // Return an empty slice in case of error
-// 	}
-
-// 	// SQL Query
-// 	rows, err := initializers.DB.Raw("SELECT * FROM friends WHERE F_NAME LIKE ? OR L_NAME LIKE ?", "%"+req.KEYWORD+"%", "%"+req.KEYWORD+"%").Rows()
-
-// 	// Check for errors
-// 	if err != nil {
-// 		c.JSON(400, gin.H{
-// 			"error": "Failed to execute SQL query",
-// 		})
-// 		return []models.Friend{} // Return an empty slice in case of error
-// 	}
-// 	defer rows.Close()
-
-// 	var friend models.Friend // Assuming FriendModel is the struct for your friend data
-// 	var friendData []models.Friend
-
-// 	for rows.Next() {
-// 		// Scan the result into the friend struct
-// 		initializers.DB.ScanRows(rows, &friend)
-// 		friendData = append(friendData, friend)
-// 	}
-
-// 	return friendData
-// }
-
-// func DeleteFriend(c *gin.Context) bool {
-// 	id := c.Param("id")
-
-// 	// Delete by id
-// 	initializers.DB.Delete(&models.Friend{}, id)
-
-// 	return true
-// }
